# qt6purchasing

./: .gitattributes  .gitignore  README.md
src/: CMakeLists.txt  abstractproduct.cpp  abstractstorebackend.cpp  abstracttransaction.cpp  transaction.cpp
src/android/: GooglePlayBilling.java  googleplaystorebackend.cpp  googleplaystorebackend.h  googleplaystoreproduct.cpp  googleplaystoreproduct.h  googleplaystoretransaction.cpp  googleplaystoretransaction.h
src/apple/: appleappstorebackend.h  appleappstorebackend.mm  appleappstoreproduct.h  appleappstoreproduct.mm  appleappstoretransaction.cpp  appleappstoretransaction.h  appleappstoretransaction.mm
src/include/qt6purchasing/: abstractproduct.h  abstractstorebackend.h  abstracttransaction.h  transaction.h
src/windows/: microsoftstorebackend.cpp  microsoftstorebackend.h  microsoftstoreproduct.cpp  microsoftstoreproduct.h  microsoftstoretransaction.cpp  microsoftstoretransaction.h  microsoftstoreworkers.cpp  microsoftstoreworkers.h  windowsstorewrappers.h
